--- a/SherpaDesk/TicketDetails.xaml
+++ b/SherpaDesk/TicketDetails.xaml
@@ -322,7 +322,7 @@
                         <Button x:Name="CloseMenu" Visibility="Visible" Content="Close" Grid.ColumnSpan="5" HorizontalAlignment="Right" VerticalAlignment="Top" Canvas.ZIndex="1" Margin="0,-50,285,0" FontSize="20" Foreground="White" Tapped="CloseMenu_Tapped" />
                         <Button x:Name="TransferMenu" Visibility="Visible" Content="Transfer" Grid.ColumnSpan="5" HorizontalAlignment="Right" VerticalAlignment="Top" Canvas.ZIndex="1" Margin="0,-50,175,0" FontSize="20" Foreground="White" Tapped="TransferMenu_Tapped" />
                         <Button x:Name="AddResponseButton" Visibility="Visible" Content="Add Response" Grid.ColumnSpan="5" HorizontalAlignment="Right" VerticalAlignment="Top" Canvas.ZIndex="1" Margin="0,-50,7,0" FontSize="20" Foreground="White" Tapped="AddResponseButton_Tapped" />
-                        <TextBlock x:Name="SubjectLabel" FontSize="50" Grid.Row="0" Margin="0,0,0,0" Grid.ColumnSpan="3" Foreground="White" />
+                        <TextBlock x:Name="SubjectLabel" TextWrapping="Wrap" MaxWidth="1300" FontSize="50" Grid.Row="0" Margin="0,0,0,0" Grid.ColumnSpan="3" Foreground="White" />
                         <Grid Grid.Row="1">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition />
@@ -330,9 +330,9 @@
                             </Grid.ColumnDefinitions>
                             <TextBlock x:Name="EndUserLabel" FontSize="40" Foreground="White" />
                             <TextBlock Text="Initial Post" HorizontalAlignment="Left" Grid.Column="1" Margin="12,13,12,0" FontSize="18" Foreground="White" />
-                        </Grid>                        
-                        <ScrollViewer VerticalAlignment="Stretch" Grid.ColumnSpan="2" Grid.Row="3" Margin="0,0,0,61" MaxHeight="150" Width="550" VerticalScrollMode="Enabled" VerticalScrollBarVisibility="Auto">
-                            <TextBlock x:Name="InitialPostLabel" Margin="0,0,18,0" TextWrapping="Wrap" FontSize="25" Foreground="White" />
+                        </Grid>
+                        <ScrollViewer VerticalAlignment="Stretch" HorizontalAlignment="Left" Grid.ColumnSpan="2" Grid.Row="3" Margin="0,0,0,61" MaxHeight="150" MinWidth="550" MaxWidth="1000" VerticalScrollMode="Enabled" VerticalScrollBarVisibility="Auto">
+                            <TextBlock x:Name="InitialPostLabel" Margin="0,0,18,0" TextAlignment="Left" TextWrapping="Wrap" FontSize="25" Foreground="White" />
                         </ScrollViewer>
                         <TextBlock x:Name="FilesLabel" Visibility="Collapsed" Text="Following file was uploaded:" Grid.ColumnSpan="3" FontSize="30" Grid.Row="3" Margin="0,160,0,0" Foreground="White" />
                         <FlipView x:Name="AttachedView" Visibility="Collapsed" Grid.Row="4" HorizontalAlignment="Left" Margin="0,0,0,0" Width="400" Height="240">
