--- a/SherpaDesk/AddTicket.xaml
+++ b/SherpaDesk/AddTicket.xaml
@@ -79,6 +79,10 @@
                 <ColumnDefinition Width="30"/>
             </Grid.ColumnDefinitions>
 
+            <Controls:WatermarkTextBox x:Name="SubjectTextbox" HorizontalAlignment="Center" WatermarkText="Subject" Height="50" Grid.Row="0" Grid.Column="0" TextWrapping="NoWrap" Text="" VerticalAlignment="Top"  FontSize="24" Width="450" />
+            <Controls:WatermarkTextBox x:Name="DescritionTextbox" AcceptsReturn="True" HorizontalAlignment="Center" Margin="0,0,0,15" WatermarkText="Details..." Grid.Row="1" Grid.RowSpan="6" TextWrapping="Wrap" Grid.Column="0" Text="" VerticalAlignment="Stretch" FontSize="24" Width="450" />
+            <Button x:Name="SaveButton" Content="Create Ticket" HorizontalAlignment="Stretch" Grid.Column="0" FontSize="30" Margin="-3,0,-3,0" VerticalAlignment="Stretch" Grid.Row="7" Background="#FF2F9129" Tapped="SaveButton_Tapped" />
+
             <TextBlock HorizontalAlignment="right" Grid.Column="2" Grid.Row="0" TextWrapping="Wrap" Text="End User" Margin="10,4,10,0" VerticalAlignment="Top" FontSize="36"/>
             <ComboBox x:Name="EndUserList" Grid.Column="3" Grid.Row="0" FontSize="24" HorizontalAlignment="Left" Width="450" Height="50" Margin="0,0,0,0" VerticalAlignment="Top">
                 <ComboBoxItem />
@@ -92,28 +96,29 @@
             </ComboBox>
             <CheckBox Grid.Row="1" Grid.Column="4" HorizontalAlignment="Left" Margin="10,15,0,0" VerticalAlignment="Top"/>
 
-            <TextBlock Grid.Column="2" HorizontalAlignment="right" Grid.Row="3" TextWrapping="Wrap" Text="Class" Margin="10,4,10,0" VerticalAlignment="Top" FontSize="36"/>
-            <ComboBox Name="ClassList" Grid.Column="3" Grid.Row="3" FontSize="24" HorizontalAlignment="Left" Width="450" Height="50" Margin="0,0,0,0" VerticalAlignment="Top">
+            <TextBlock Grid.Column="2" HorizontalAlignment="right" Grid.Row="2" TextWrapping="Wrap" Text="Class" Margin="10,4,10,0" VerticalAlignment="Top" FontSize="36"/>
+            <ComboBox Name="ClassList" Grid.Column="3" Grid.Row="2" FontSize="24" HorizontalAlignment="Left" Width="450" Height="50" Margin="0,0,0,0" VerticalAlignment="Top">
             </ComboBox>
 
-            <TextBlock HorizontalAlignment="right" Grid.Column="2" Grid.Row="4" TextWrapping="Wrap" Text="Technician" Margin="10,4,10,0" VerticalAlignment="Top" FontSize="36"/>
-            <ComboBox x:Name="TechnicianList" Grid.Column="3" Grid.Row="4" FontSize="24" HorizontalAlignment="Left" Width="450" Height="50" Margin="0,0,0,0" VerticalAlignment="Top">
+            <TextBlock HorizontalAlignment="right" Grid.Column="2" Grid.Row="3" TextWrapping="Wrap" Text="Technician" Margin="10,4,10,0" VerticalAlignment="Top" FontSize="36"/>
+            <ComboBox x:Name="TechnicianList" Grid.Column="3" Grid.Row="3" FontSize="24" HorizontalAlignment="Left" Width="450" Height="50" Margin="0,0,0,0" VerticalAlignment="Top">
             </ComboBox>
-            <HyperlinkButton x:Name="TechnicianMeLink" Content="Me" Grid.Row="4" Grid.Column="4" Padding="0" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" FontSize="24" Foreground="White" Height="51" FontWeight="Normal" Click="TechnicianMeLink_Click"/>
+            <HyperlinkButton x:Name="TechnicianMeLink" Content="Me" Grid.Row="3" Grid.Column="4" Padding="0" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" FontSize="24" Foreground="White" Height="51" FontWeight="Normal" Click="TechnicianMeLink_Click"/>
 
-            <TextBlock HorizontalAlignment="right" Grid.Column="2" Grid.Row="5" TextWrapping="Wrap" Text="Alternate Tech" Margin="10,4,10,0" VerticalAlignment="Top" FontSize="36"/>
-            <ComboBox x:Name="AlternateTechnicianList" Grid.Column="3" Grid.Row="5" FontSize="24" HorizontalAlignment="Left" Width="450" Height="50" Margin="0,0,0,0" VerticalAlignment="Top">
+            <TextBlock HorizontalAlignment="right" Grid.Column="2" Grid.Row="4" TextWrapping="Wrap" Text="Alternate Tech" Margin="10,4,10,0" VerticalAlignment="Top" FontSize="36"/>
+            <ComboBox x:Name="AlternateTechnicianList" Grid.Column="3" Grid.Row="4" FontSize="24" HorizontalAlignment="Left" Width="450" Height="50" Margin="0,0,0,0" VerticalAlignment="Top">
             </ComboBox>
-            <HyperlinkButton x:Name="AlternateTechMeLink" Content="Me" Grid.Row="5" Grid.Column="4" Padding="0" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" FontSize="24" Foreground="White" Height="51" FontWeight="Normal" Click="AlternateTechMeLink_Click"/>
+            <HyperlinkButton x:Name="AlternateTechMeLink" Content="Me" Grid.Row="4" Grid.Column="4" Padding="0" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" FontSize="24" Foreground="White" Height="51" FontWeight="Normal" Click="AlternateTechMeLink_Click"/>
 
-            <TextBlock HorizontalAlignment="right" Grid.Column="2" Grid.Row="6" TextWrapping="Wrap" Text="Files" Margin="10,4,10,0" VerticalAlignment="Top" FontSize="36"/>
-            <Button x:Name="filepickButton" Content="Select Files" Grid.Column="3" Height="auto" HorizontalAlignment="Stretch" Margin="-3,0,-3,0" Grid.Row="6" VerticalAlignment="Top" FontSize="24" Click="filepickButton_Click"/>
+            <ScrollViewer HorizontalAlignment="Left" Grid.Column="3" Grid.ColumnSpan="3" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" Grid.Row="5" Grid.RowSpan="2" Height="100" VerticalAlignment="Top" Width="auto">
+                <ListView x:Name="SelectedAlternateTechnicianList" Grid.Column="3" Margin="0,0,0,0" Grid.Row="5" Grid.RowSpan="3" VerticalAlignment="Top" FontSize="18" HorizontalAlignment="Left" Width="450" SelectionMode="None">
+                </ListView>
+            </ScrollViewer>
 
-            <Controls:WatermarkTextBox x:Name="SubjectTextbox" HorizontalAlignment="Center" WatermarkText="Subject" Height="50" Grid.Row="0" Grid.Column="0" TextWrapping="NoWrap" Text="" VerticalAlignment="Top"  FontSize="24" Width="450" />
-            <Controls:WatermarkTextBox x:Name="DescritionTextbox" AcceptsReturn="True" HorizontalAlignment="Center" Margin="0,0,0,15" WatermarkText="Details..." Grid.Row="1" Grid.RowSpan="6" TextWrapping="Wrap" Grid.Column="0" Text="" VerticalAlignment="Stretch" FontSize="24" Width="450" />
-            <Button x:Name="SaveButton" Content="Create Ticket" HorizontalAlignment="Stretch" Grid.Column="0" FontSize="30" Margin="-3,0,-3,0" VerticalAlignment="Stretch" Grid.Row="7" Background="#FF2F9129" Tapped="SaveButton_Tapped" />
-            <ScrollViewer HorizontalAlignment="Left" Grid.Column="3" Grid.ColumnSpan="3" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" Grid.Row="7" Height="auto" VerticalAlignment="Top" Width="auto">
-                <TextBlock x:Name="SelectedFilesList" Width="450" HorizontalAlignment="Left" Height="auto" Margin="0,0,0,0" Grid.Row="7" TextWrapping="WrapWholeWords" FontSize="20" VerticalAlignment="Top"/>
+            <TextBlock HorizontalAlignment="right" Grid.Column="2" Grid.Row="7" TextWrapping="Wrap" Text="Files" Margin="10,4,10,0" VerticalAlignment="Top" FontSize="36"/>
+            <Button x:Name="filepickButton" Content="Select Files" Grid.Column="3" Height="auto" HorizontalAlignment="Stretch" Margin="-3,0,-3,0" Grid.Row="7" VerticalAlignment="Top" FontSize="24" Click="filepickButton_Click"/>
+            <ScrollViewer HorizontalAlignment="Left" Grid.Column="3" Grid.ColumnSpan="3" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" Grid.Row="8" Height="auto" VerticalAlignment="Top" Width="auto">
+                <TextBlock x:Name="SelectedFilesList" Width="450" HorizontalAlignment="Left" Height="auto" Margin="0,0,0,0" Grid.Row="8" TextWrapping="WrapWholeWords" FontSize="20" VerticalAlignment="Top"/>
             </ScrollViewer>
         </Grid>
     </Grid>
