--- a/SherpaDesk/AddTicket.xaml
+++ b/SherpaDesk/AddTicket.xaml
@@ -81,7 +81,7 @@
 
             <Controls:WatermarkTextBox x:Name="SubjectTextbox" HorizontalAlignment="Center" WatermarkText="Subject" Height="50" Grid.Row="0" Grid.Column="0" TextWrapping="NoWrap" Text="" VerticalAlignment="Top"  FontSize="24" Width="450" />
             <Controls:WatermarkTextBox x:Name="DescritionTextbox" AcceptsReturn="True" HorizontalAlignment="Center" Margin="0,0,0,15" WatermarkText="Details..." Grid.Row="1" Grid.RowSpan="6" TextWrapping="Wrap" Grid.Column="0" Text="" VerticalAlignment="Stretch" FontSize="24" Width="450" />
-            <Button x:Name="SaveButton" Content="Create Ticket" HorizontalAlignment="Stretch" Grid.Column="0" FontSize="30" Margin="-3,0,-3,0" VerticalAlignment="Stretch" Grid.Row="7" Background="#FF2F9129" Tapped="SaveButton_Tapped" />
+            <Button x:Name="SaveButton" Content="Create Ticket" HorizontalAlignment="Stretch" Grid.Column="0" FontSize="30" Margin="-3,0,-3,0" Padding="0,0,0,3" VerticalAlignment="Stretch" Grid.Row="7" Background="#FF2F9129" Tapped="SaveButton_Tapped" />
 
             <TextBlock HorizontalAlignment="right" Grid.Column="2" Grid.Row="0" TextWrapping="Wrap" Text="End User" Margin="10,4,10,0" VerticalAlignment="Top" FontSize="36"/>
             <ComboBox x:Name="EndUserList" Grid.Column="3" Grid.Row="0" FontSize="24" HorizontalAlignment="Left" Width="450" Height="50" Margin="0,0,0,0" VerticalAlignment="Top">
@@ -116,7 +116,7 @@
             </ScrollViewer>
 
             <TextBlock HorizontalAlignment="right" Grid.Column="2" Grid.Row="7" TextWrapping="Wrap" Text="Files" Margin="10,4,10,0" VerticalAlignment="Top" FontSize="36"/>
-            <Button x:Name="filepickButton" Content="Select Files" Grid.Column="3" Height="auto" HorizontalAlignment="Stretch" Margin="-3,0,-3,0" Grid.Row="7" VerticalAlignment="Top" FontSize="24" Click="filepickButton_Click"/>
+            <Button x:Name="filepickButton" Content="Attach Files" Grid.Column="3" Height="auto" HorizontalAlignment="Stretch" Padding="0,5,0,8" Margin="-3,0,-3,0" Grid.Row="7" VerticalAlignment="Top" FontSize="24" Click="filepickButton_Click" />
             <ScrollViewer HorizontalAlignment="Left" Grid.Column="3" Grid.ColumnSpan="3" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" Grid.Row="8" Height="auto" VerticalAlignment="Top" Width="auto">
                 <TextBlock x:Name="SelectedFilesList" Width="450" HorizontalAlignment="Left" Height="auto" Margin="0,0,0,0" Grid.Row="8" TextWrapping="WrapWholeWords" FontSize="20" VerticalAlignment="Top"/>
             </ScrollViewer>
