--- a/SherpaDesk/Login.xaml
+++ b/SherpaDesk/Login.xaml
@@ -40,8 +40,8 @@
                     </Style>
                 </xtk:WatermarkPasswordBox.WatermarkTextStyle>
             </xtk:WatermarkPasswordBox>
-            <Button x:Name="SignInButton" Content="Sign In" TabIndex="2" HorizontalAlignment="Center" Grid.Row="3" VerticalAlignment="Top" Width="680" Height="66" Click="SignIn" FontSize="36" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Background="#FF57AE57" />
-            <HyperlinkButton Content="Register New SherpaDesk Organization" TabIndex="3" NavigateUri="http://www.sherpadesk.com/start-your-climb/" HorizontalAlignment="Center" Margin="0,0,0,0" Grid.Row="5" FontSize="30" Foreground="White" Background="#FF6B9452" BorderBrush="White" BorderThickness="2" Height="66" Width="680"/>
+            <Button x:Name="SignInButton" Content="Sign In" Padding="0,0,0,5" TabIndex="2" HorizontalAlignment="Center" Grid.Row="3" VerticalAlignment="Top" Width="680" Height="66" Click="SignIn" FontSize="36" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Background="#FF57AE57" />
+            <HyperlinkButton Content="Register New SherpaDesk Organization" Padding="0,0,0,3" TabIndex="3" NavigateUri="http://www.sherpadesk.com/start-your-climb/" HorizontalAlignment="Center" Margin="0,0,0,0" Grid.Row="5" FontSize="30" Foreground="White" Background="#FF6B9452" BorderBrush="White" BorderThickness="2" Height="66" Width="680"/>
             <CheckBox x:Name="ModeBox" Canvas.ZIndex="10" Content="beta" HorizontalAlignment="Left" Margin="40,188,0,0" VerticalAlignment="Top"/>
             <HyperlinkButton x:Name="ApiHyperlink" Canvas.ZIndex="10" Content="http://app.sherpadesk.com" NavigateUri="http://app.sherpadesk.com" Grid.Row="0" Grid.Column="0"  HorizontalAlignment="Left" Margin="489,43,0,0" VerticalAlignment="Top" Foreground="White"/>
             <Image Height="219" Grid.Row="0" Width="705" Source="Assets/StoreLogo.png" />
