--- a/SherpaDesk/AddTime.xaml
+++ b/SherpaDesk/AddTime.xaml
@@ -50,18 +50,15 @@
                 <RowDefinition Height="60"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto"/>
-                <ColumnDefinition Width="20"/>
-                <ColumnDefinition Width="auto"/>
-                <ColumnDefinition Width="0"/>
-                <ColumnDefinition Width="150"/>
-                <ColumnDefinition Width="auto"/>
-                <ColumnDefinition Width="120"/>
+                <ColumnDefinition Width="330"/>
+                <ColumnDefinition Width="320"/>
+                <ColumnDefinition Width="320"/>
+                <ColumnDefinition Width="320"/>
             </Grid.ColumnDefinitions>
 
             <TextBlock HorizontalAlignment="left" Grid.Row="0" Margin="10,0,0,0" TextWrapping="Wrap" Text="Log My Time" VerticalAlignment="Top" FontSize="40"/>
 
-            <Grid Grid.Column="2" Grid.ColumnSpan="3">
+            <Grid Grid.Column="1" Grid.ColumnSpan="4">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="auto" />
                     <ColumnDefinition Width="10" />
@@ -71,26 +68,26 @@
                 <telerikInput:RadDatePicker x:Name="DateField" Grid.Column="2" Height="60" Width="30" FontSize="40" Grid.Row="0" DisplayValueFormat="dddd, MMMM dd, yyyy" ItemLength="90" Margin="0,0,0,0" ValueChanged="DateField_ValueChanged" />
             </Grid>
 
-            <TextBlock HorizontalAlignment="left" Grid.Row="1" Margin="10,25,0,0" TextWrapping="Wrap" Text="Technician" VerticalAlignment="Top" FontSize="30"/>
-            <ComboBox Name="TechnicianList" Grid.Column="0" Grid.Row="2" FontSize="24" HorizontalAlignment="Left" Width="400" Height="50" Margin="10,0,0,0" VerticalAlignment="Top">
-                <ComboBoxItem>
-                    <TextBox Text="something"/>
-                </ComboBoxItem>
-                <ComboBoxItem x:Name="TechnicianMe" />
+            <TextBlock HorizontalAlignment="left" Grid.Column="0" Grid.Row="1" Margin="10,25,0,0" TextWrapping="Wrap" Text="Technician" VerticalAlignment="Top" FontSize="30"/>
+            <ComboBox Name="TechnicianList" Grid.Column="0" Grid.Row="2" FontSize="24" HorizontalAlignment="Left" Width="300" Height="50" Margin="10,0,20,0" VerticalAlignment="Top" SelectionChanged="TechnicianList_SelectionChanged">
             </ComboBox>
 
-            <TextBlock HorizontalAlignment="left" Grid.Row="1" Grid.Column="2" Margin="0,25,0,0" TextWrapping="Wrap" Text="Project" VerticalAlignment="Top" FontSize="30"/>
-            <ComboBox Name="ProjectList" Grid.Column="2" Grid.Row="2" FontSize="24" HorizontalAlignment="Left" Width="400" Height="50" Margin="0,0,0,0" VerticalAlignment="Top">
+            <TextBlock HorizontalAlignment="left" Grid.Row="1" Grid.Column="1" Margin="0,25,0,0" TextWrapping="Wrap" Text="Account" VerticalAlignment="Top" FontSize="30"/>
+            <ComboBox Name="AccountList" Grid.Column="1" Grid.Row="2" FontSize="24" HorizontalAlignment="Left" Width="300" Height="50" Margin="0,0,20,0" VerticalAlignment="Top" SelectionChanged="AccountList_SelectionChanged">
             </ComboBox>
 
-            <TextBlock HorizontalAlignment="left" Grid.Row="1" Grid.Column="4" Margin="-5,25,0,0" TextWrapping="Wrap" Text="Task Type" VerticalAlignment="Top" FontSize="30"/>
-            <ComboBox Name="TaskTypeList" Grid.Column="4" Grid.Row="2" Grid.ColumnSpan="3" FontSize="24" HorizontalAlignment="Left" Width="400" Height="50" Margin="-5,0,20,0" VerticalAlignment="Top">
+            <TextBlock Name="ProjectLabel" HorizontalAlignment="left" Grid.Row="1" Grid.Column="2" Margin="0,25,0,0" TextWrapping="Wrap" Text="Project" VerticalAlignment="Top" FontSize="30"/>
+            <ComboBox Name="ProjectList" Grid.Column="2" Grid.Row="2" FontSize="24" HorizontalAlignment="Left" Width="300" Height="50" Margin="0,0,20,0" VerticalAlignment="Top" SelectionChanged="ProjectList_SelectionChanged">
+            </ComboBox>
+
+            <TextBlock Name="TaskTypeLabel" HorizontalAlignment="left" Grid.Row="1" Grid.Column="3" Margin="0,25,0,0" TextWrapping="Wrap" Text="Task Type" VerticalAlignment="Top" FontSize="30"/>
+            <ComboBox Name="TaskTypeList" Grid.Column="3" Grid.Row="2" FontSize="24" HorizontalAlignment="Left" Width="300" Height="50" Margin="0,0,20,0" VerticalAlignment="Top">
             </ComboBox>
 
             <TextBlock HorizontalAlignment="left" Grid.Row="3" Grid.Column="0" Margin="10,25,0,0" TextWrapping="Wrap" Text="Notes" VerticalAlignment="Top" FontSize="30"/>
-            <TextBox Name="NoteTextBox" AcceptsReturn="True" Margin="10,0,0,0" Grid.RowSpan="3" HorizontalAlignment="Center" Height="300" Grid.Row="4" TextWrapping="Wrap" Grid.Column="0" Text="" VerticalAlignment="Top" FontSize="24" Width="400" />
+            <TextBox Name="NoteTextBox" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="4" Grid.RowSpan="3" Margin="10,0,20,0" HorizontalAlignment="Left" Height="300" Width="620" TextWrapping="Wrap" AcceptsReturn="True" Text="" VerticalAlignment="Top" FontSize="24" />
 
-            <Grid Style="{StaticResource LayoutRootStyle}" Grid.Column="2" Grid.ColumnSpan="6" Width="740" HorizontalAlignment="Left" Grid.RowSpan="3" Grid.Row="4" Background="#FF6B3B28" Margin="1,0,0,0">
+            <Grid Style="{StaticResource LayoutRootStyle}" Grid.Column="2" Grid.ColumnSpan="2" Width="720" HorizontalAlignment="Left" Grid.RowSpan="3" Grid.Row="4" Background="#FF6B3B28" Margin="1,0,20,0">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="60"/>
                     <RowDefinition Height="60"/>
@@ -111,19 +108,19 @@
                     <ColumnDefinition Width="20"/>
                 </Grid.ColumnDefinitions>
 
-                <TextBlock HorizontalAlignment="left" Grid.Row="0" Grid.Column="1" Margin="0,25,0,0" TextWrapping="Wrap" Text="Start" VerticalAlignment="Top" FontSize="30"/>
+                <TextBlock HorizontalAlignment="left" Grid.Row="0" Grid.Column="1" Margin="0,25,0,0" TextWrapping="Wrap" Text="Start" VerticalAlignment="Top" FontSize="24"/>
                 <Grid Grid.Column="1" Grid.Row="1">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="auto" />
                         <ColumnDefinition Width="10" />
                         <ColumnDefinition Width="auto" />
                     </Grid.ColumnDefinitions>
-                    <TextBlock x:Name="StartTimeLabel" Grid.Column="0" FontSize="40" VerticalAlignment="Top" Margin="0,5,0,0" />
+                    <TextBlock x:Name="StartTimeLabel" Grid.Column="0" FontSize="30" VerticalAlignment="Top" Margin="0,5,0,0" />
                     <telerikInput:RadTimePicker x:Name="StartTimePicker" Grid.Column="2" Height="50" Width="30" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" ValueChanged="StartTimePicker_ValueChanged" />
                 </Grid>
 
 
-                <TextBlock HorizontalAlignment="left" Grid.Row="0" Grid.Column="5" Margin="0,25,0,0" TextWrapping="Wrap" Text="Stop" VerticalAlignment="Top" FontSize="30"/>
+                <TextBlock HorizontalAlignment="left" Grid.Row="0" Grid.Column="5" Margin="0,25,0,0" TextWrapping="Wrap" Text="Stop" VerticalAlignment="Top" FontSize="24"/>
 
                 <Grid Grid.Column="5" Grid.Row="1">
                     <Grid.ColumnDefinitions>
@@ -131,13 +128,13 @@
                         <ColumnDefinition Width="10" />
                         <ColumnDefinition Width="auto" />
                     </Grid.ColumnDefinitions>
-                    <TextBlock x:Name="EndTimeLabel" Grid.Column="0" FontSize="40" VerticalAlignment="Top" Margin="0,5,0,0" />
+                    <TextBlock x:Name="EndTimeLabel" Grid.Column="0" FontSize="30" VerticalAlignment="Top" Margin="0,5,0,0" />
                     <telerikInput:RadTimePicker x:Name="EndTimePicker" Grid.Column="2" Height="50" Width="30" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" ValueChanged="EndTimePicker_ValueChanged" />
                 </Grid>
-                <TextBox x:Name="HoursTextBox" Margin="0,3,0,0" InputScope="NumberFullWidth" Text="0.00" HorizontalAlignment="Left" Height="48" Grid.Row="1" TextWrapping="Wrap" Grid.Column="9" VerticalAlignment="Top" FontSize="30" Width="130" />
-                <TextBlock HorizontalAlignment="left" Grid.Row="0" Grid.Column="9" Margin="0,25,0,0" TextWrapping="Wrap" Text="Hours" VerticalAlignment="Top" FontSize="30"/>
+                <TextBox x:Name="HoursTextBox" Margin="0,3,0,0" InputScope="NumberFullWidth" Text="0.00" HorizontalAlignment="Left" Height="48" Grid.Row="1" TextWrapping="Wrap" Grid.Column="9" VerticalAlignment="Top" FontSize="24" Width="100" />
+                <TextBlock HorizontalAlignment="left" Grid.Row="0" Grid.Column="9" Margin="0,25,0,0" TextWrapping="Wrap" Text="Hours" VerticalAlignment="Top" FontSize="24"/>
                 <TextBlock x:Name="ErrorHours" Grid.Column="9" HorizontalAlignment="Left" Margin="0 -50 0 0" Grid.Row="1" Height="50" VerticalAlignment="Top"/>
-                <CheckBox Name="BillableBox" Content="Billable" Padding="2,-1,0,0" HorizontalAlignment="Left" Margin="0,0,0,4" Grid.Row="1" Grid.Column="11" VerticalAlignment="Center" FontSize="20" IsChecked="True"/>
+                <CheckBox Name="BillableBox" Content="Billable" Padding="2,-1,0,0" HorizontalAlignment="Left" Margin="0,0,0,4" Grid.Row="1" Grid.Column="11" VerticalAlignment="Center" FontSize="24" IsChecked="True"/>
             </Grid>
             <Button Content="Save My Time" Margin="7,20,-3,0" Padding="0,0,0,4" Grid.Column="0" HorizontalAlignment="Stretch" Grid.Row="7" VerticalAlignment="Top" Height="70" Grid.RowSpan="2" FontSize="36" Background="#FF2F9129" Click="Button_Click"/>
         </Grid>
