--- a/SherpaDesk/Timesheet.xaml
+++ b/SherpaDesk/Timesheet.xaml
@@ -103,15 +103,19 @@
                         <RowDefinition Height="auto" />
                         <RowDefinition Height="auto" />
                         <RowDefinition Height="auto" />
+                        <RowDefinition Height="auto" />
                     </Grid.RowDefinitions>
                     <TextBlock HorizontalAlignment="left" Grid.Row="0" Margin="10,10,0,0" TextWrapping="Wrap" Text="Technician" VerticalAlignment="Top" FontSize="24"/>
-                    <ComboBox Name="TechnicianList" Grid.Column="2" Grid.Row="0" FontSize="24" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="0,10,0,0" />
+                    <ComboBox Name="TechnicianList" Grid.Column="2" Grid.Row="0" FontSize="24" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="0,10,0,0" SelectionChanged="TechnicianList_SelectionChanged" />
 
-                    <TextBlock HorizontalAlignment="left" Grid.Row="1" Margin="10,10,0,0" TextWrapping="Wrap" Text="Project" VerticalAlignment="Top" FontSize="24"/>
-                    <ComboBox Name="ProjectList" Grid.Column="2" Grid.Row="1" FontSize="24" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="0,10,0,0" />
+                    <TextBlock HorizontalAlignment="left" Grid.Row="1" Margin="10,10,0,0" TextWrapping="Wrap" Text="Account" VerticalAlignment="Top" FontSize="24"/>
+                    <ComboBox Name="AccountList" Grid.Column="2" Grid.Row="1" FontSize="24" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="0,10,0,0" SelectionChanged="AccountList_SelectionChanged" />
 
-                    <TextBlock HorizontalAlignment="left" Grid.Row="2" Margin="10,10,0,0" TextWrapping="Wrap" Text="Task Type" VerticalAlignment="Top" FontSize="24"/>
-                    <ComboBox Name="TaskTypeList" Grid.Column="2" Grid.Row="2" FontSize="24" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="0,10,0,0" />
+                    <TextBlock Name="ProjectLabel" HorizontalAlignment="left" Grid.Row="2" Margin="10,10,0,0" TextWrapping="Wrap" Text="Project" VerticalAlignment="Top" FontSize="24"/>
+                    <ComboBox Name="ProjectList" Grid.Column="2" Grid.Row="2" FontSize="24" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="0,10,0,0" SelectionChanged="ProjectList_SelectionChanged" />
+
+                    <TextBlock Name="TaskTypeLabel" HorizontalAlignment="left" Grid.Row="3" Margin="10,10,0,0" TextWrapping="Wrap" Text="Task Type" VerticalAlignment="Top" FontSize="24"/>
+                    <ComboBox Name="TaskTypeList" Grid.Column="2" Grid.Row="3" FontSize="24" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="0,10,0,0" />
 
                     <TextBlock HorizontalAlignment="left" Grid.Row="4" Margin="10,10,0,0" TextWrapping="Wrap" Text="Billable" VerticalAlignment="Top" FontSize="24"/>
                     <CheckBox Name="BillableBox" HorizontalAlignment="Left" Margin="0,10,0,0" Grid.Column="2" Grid.Row="4" VerticalAlignment="Top" FontSize="20" IsChecked="True"/>
