--- a/SherpaDesk/InviteUser.xaml
+++ b/SherpaDesk/InviteUser.xaml
@@ -7,30 +7,40 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:Controls="using:WinRTXamlToolkit.Controls"
     mc:Ignorable="d"
-    VerticalAlignment="Center"
+    VerticalAlignment="Top"
 	HorizontalAlignment="Right"
-    Height="500"
+    Height="600"
 	Width="400"
-    d:DesignHeight="500"
+    d:DesignHeight="600"
     d:DesignWidth="400" 
     BorderBrush="LightBlue" 
     BorderThickness="1" Margin="0,-2,0,2">
 
     <Grid Background="#FF0055A0" >
-        <Grid Background="Transparent" VerticalAlignment="Center">
+        <Grid Background="Transparent" VerticalAlignment="Top">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="60"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="80"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="80"/>
+                <RowDefinition Height="50"/>
                 <RowDefinition Height="80"/>
                 <RowDefinition Height="60"/>
             </Grid.RowDefinitions>
-            <TextBlock Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" TextWrapping="Wrap" Text="New User Email Address" Margin="10,10,10,0" VerticalAlignment="Bottom" FontSize="26"/>
-            <Controls:WatermarkTextBox x:Name="SubjectTextbox" HorizontalAlignment="Center" WatermarkText="Email Address" Height="50" Grid.Row="1" Grid.ColumnSpan="2" Grid.Column="0" TextWrapping="NoWrap" Text="" VerticalAlignment="Top"  FontSize="20" Width="380" Margin="10, 5, 10, 5" />
-            <Button x:Name="InviteButton" Content="Submit" HorizontalAlignment="Center" Grid.Column="0" FontSize="24" Width="180" Margin="0,5,0,5" VerticalAlignment="Stretch" Grid.Row="2" Background="#FF2F9129" Click="InviteButton_Click" />
-            <HyperlinkButton Name="CancelButton" Content="Cancel" Grid.Column="1" HorizontalAlignment="Left" Margin="0,5,0,5" Grid.Row="2" VerticalAlignment="Center" FontSize="24" Foreground="LightGray" Click="CancelButton_Click"/>
+            <TextBlock Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" TextWrapping="Wrap" Text="New User" Margin="10,10,10,0" VerticalAlignment="Center" FontSize="26"/>
+            <TextBlock Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2" TextWrapping="Wrap" Text="First Name" Margin="10,10,10,0" VerticalAlignment="Bottom" FontSize="20"/>
+            <Controls:WatermarkTextBox x:Name="FirstNameTextbox" HorizontalAlignment="Center" WatermarkText="User First Name" Height="50" Grid.Row="2" Grid.ColumnSpan="2" Grid.Column="0" TextWrapping="NoWrap" Text="" VerticalAlignment="Top"  FontSize="20" Width="380" Margin="10, 5, 10, 5" />
+            <TextBlock Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="2" TextWrapping="Wrap" Text="Last Name" Margin="10,10,10,0" VerticalAlignment="Bottom" FontSize="20"/>
+            <Controls:WatermarkTextBox x:Name="LastNameTextbox" HorizontalAlignment="Center" WatermarkText="User Last Name" Height="50" Grid.Row="4" Grid.ColumnSpan="2" Grid.Column="0" TextWrapping="NoWrap" Text="" VerticalAlignment="Top"  FontSize="20" Width="380" Margin="10, 5, 10, 5" />
+            <TextBlock Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="2" TextWrapping="Wrap" Text="Email" Margin="10,10,10,0" VerticalAlignment="Bottom" FontSize="20" />
+            <Controls:WatermarkTextBox x:Name="EmailTextbox" HorizontalAlignment="Center" WatermarkText="Email Address" Height="50" Grid.Row="6" Grid.ColumnSpan="2" Grid.Column="0" TextWrapping="NoWrap" Text="" VerticalAlignment="Top"  FontSize="20" Width="380" Margin="10, 5, 10, 5" />
+            <Button x:Name="InviteButton" Content="Submit" HorizontalAlignment="Center" Grid.Column="0" FontSize="24" Width="180" Margin="0,5,0,5" VerticalAlignment="Stretch" Grid.Row="7" Background="#FF2F9129" Click="InviteButton_Click" />
+            <HyperlinkButton Name="CancelButton" Content="Cancel" Grid.Column="1" HorizontalAlignment="Left" Margin="0,5,0,5" Grid.Row="7" VerticalAlignment="Center" FontSize="24" Foreground="LightGray" Click="CancelButton_Click"/>
         </Grid>
     </Grid>
 </UserControl>
